// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`verifying NavSearch to be rendered 1`] = `
<div>
  <div>
    <input
      class="ant-input"
      placeholder="Navigate to..."
      type="text"
    />
  </div>
</div>
`;

exports[`verifying NavSearch to be rendered in loading state 1`] = `
<div>
  <div>
    <input
      class="ant-input"
      placeholder="Navigate to..."
      type="text"
    />
    <p>
      Loading...
    </p>
  </div>
</div>
`;
